--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -6,7 +6,7 @@
     "message": "center"
   },
   "gray_white_option": {
-    "message": "DOS gray on white"
+    "message": "DOS gray"
   },
   "url_help": {
     "message": "https://github.com/bengarrett/RetroTxt/blob/master/README.md"
