--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -5,6 +5,9 @@
   "center": {
     "message": "center"
   },
+  "Gray": {
+    "message": "Gray"
+  },
   "gray_white_option": {
     "message": "DOS gray"
   },
