--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -5,6 +5,9 @@
   "center": {
     "message": "centre"
   },
+  "Gray": {
+    "message": "Grey"
+  },
   "gray_white_option": {
     "message": "DOS grey"
   }
