--- a/ext/_locales/en_GB/messages.json
+++ b/ext/_locales/en_GB/messages.json
@@ -8,6 +8,12 @@
   "center": {
     "message": "centre"
   },
+  "customize": {
+    "message": "customise"
+  },
+  "Minimalize": {
+    "message": "Minimalise"
+  },
   "Gray": {
     "message": "Grey"
   },
