--- a/ext/_locales/en_US/messages.json
+++ b/ext/_locales/en_US/messages.json
@@ -8,6 +8,12 @@
   "center": {
     "message": "center"
   },
+  "customize": {
+    "message": "customize"
+  },
+  "Minimalize": {
+    "message": "Minimalize"
+  },
   "Gray": {
     "message": "Gray"
   },
