caddy instructions. many fixes and updates for the current ext release.

--- a/ext/fonts/README
+++ b/ext/fonts/README
@@ -1,3 +1,8 @@
-These regenerated and compressed woff2 fonts are not for redistribution or 
-reuse. You must use the author's original fonts located in the root fonts/ 
-that also include their licenses and documentation.
+*************************************************
+ THESE FONTS ARE NOT FOR REDISTRIBUTION OR REUSE
+*************************************************
+
+These regenerated and compressed woff2 fonts are only for use with RetroTxt
+and are not for redistribution or reuse. You are required to use the
+author's original fonts located in the RetroTxt/fonts/ directory,
+that includes the font licenses and documentation.
